# gash

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  report
src/: doors.rs  main.rs  visualization.rs
wasm/: Cargo.toml  build  test
wasm/src/: doors.rs  lib.rs  pathfinding.rs  rooms.rs  visualization.rs
www/: build  index.css  index.html  index.ts  package.json  test  test.ts
www/modules/: three.ts
